# NeuraDesk

./: .gitignore  DOCUMENTATION.md  README.md  docker-compose.yml
backend/: api.py  app.py  pyproject.toml  requirements.txt  setup_user.py  test_db.py  test_jwt.py  test_upload.py  test_uploaders.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/endpoints/: auth.py  chat.py  documents.py  search.py
backend/app/core/: celery_app.py  config.py  data_loader.py  search.py  security.py  vectorstore.py
backend/app/db/: database.py
backend/app/models/: schemas.py
backend/app/tasks/: document_tasks.py
backend/src/: data_loader.py  embedding.py  search.py  vectorstore.py
chrome-extension/: manifest.json  popup.css  popup.html  popup.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthScreen.tsx  ChatTab.tsx  Header.tsx  ManageTab.tsx  SearchModal.tsx  SearchTab.tsx  Sidebar.tsx  UploadModal.tsx  UploadTab.tsx  types.ts
