[project]
name = "python-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langchain-postgres>=0.0.17",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "typesense>=2.0.0",
    "uvicorn>=0.49.0",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "python-docx>=1.2.0",
    "reportlab>=5.0.0",
]
